<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <include layout="@layout/header" />

 
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/hello_world"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="50dp"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceMedium" />
             <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="75dp"
                android:textSize="15sp"
                android:text="(Mobile Number)"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_marginLeft="32dp"
                android:layout_toRightOf="@+id/textView2"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textview99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:color="#ff0000" 
                android:textColor="#ff0000"
                android:layout_marginLeft="140dip"
                android:text="मोबाइल नंबर केवळ नोंदणी केलेले वापरवा"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
              <TextView
                android:id="@+id/textview222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="17dp"
                android:textSize="10sp"
                android:color="#ff0000" 
                android:textColor="#ff0000"
                android:layout_marginLeft="140dip"
                android:text="[ only used register mobile number ]"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="38dp"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
              <TextView
                android:id="@+id/textView377"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="58dp"
                android:text="(Password)"
                 android:textSize="15sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignLeft="@+id/editText1"
                android:ems="10"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="230dp" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText2"
                    android:layout_centerHorizontal="true"
                    android:onClick="login"
                    android:text="@string/Login" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/Register" />
            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_centerHorizontal="true"
                android:text="@string/directnews"
                android:color="#ff0000" 
                android:textColor="#ff0000"
                android:layout_marginTop="100dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" /> 
        </RelativeLayout>
        <!-- </FrameLayout> -->

    </LinearLayout>

   <!-- <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/admarvel" />
    </LinearLayout>-->

</LinearLayout>